--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>DaanDobber</h1>
+<div class="watereffect">
+  <h1>Daan Dobber</h1>
+</div>
   </body>
 </html>
