--- a/index.html
+++ b/index.html
@@ -1,36 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Daan Dobber</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@900&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<main> 
-  <h1>
-    <div class="text-3d">
-      <div class="text-3d__item text-3d__item--r">Daan Dobber</div>
-      <div class="text-3d__item text-3d__item--g">Daan Dobber</div>
-      <div class="text-3d__item text-3d__item--b">Daan Dobber</div>
-      <div class="text-3d__item text-3d__item--default">Daan Dobber</div>
-    </div>
-  </h1>
-</main>
-<div class="footer">
-  <div class="shape-3d">
-    <div class="shape-3d__item shape-3d__item--r"></div>
-    <div class="shape-3d__item shape-3d__item--g"></div>
-    <div class="shape-3d__item shape-3d__item--b"></div>
-    <div class="shape-3d__item shape-3d__item--default"></div>
-  </div>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Daan Dobber</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+<div class="watereffect">
+  <h1>Daan Dobber</h1>
 </div>
-<!-- partial -->
-  
-</body>
+  </body>
 </html>
